--- a/src/backend/web/templates/suggestions/suggest_apiwrite.html
+++ b/src/backend/web/templates/suggestions/suggest_apiwrite.html
@@ -72,6 +72,7 @@
                         <p>All fields below are required, please do the best you can to fill them accurately </p>
 
                         <form action="/request/apiwrite" method="post" id="suggest_apiwrite">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                             <table class="table table-striped table-hover table-condensed">
                                 <tr>
                                     <td>Event Key</td>
